[package]
name = "kolli-desu"
version = "0.1.0"
authors = ["delma <delma@del.ma>", "VoxWave <victor_bankowski@hotmail.com>"]
edition = "2018"

[workspace]
members = ["visualise", "."]

[dependencies]
alga = "0.5.2"
mopa = "0.2.2"
serde_derive = "1.0"
serde = "1.0"

[dependencies.nalgebra]
version = "0.17.1"
features = ["serde-serialize"]